--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pochoflix</title>
 
+    <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Netflix_icon.svg/1200px-Netflix_icon.svg.png"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body class="p-3 mb-2 bg-dark text-white">
 
-    <h1 class="display-1">POCHOFLIX</h1>
+    <h1 class="display-1"><a href="https://fontmeme.com/netflix-font/"><img src="https://fontmeme.com/permalink/210330/22043d3ce74e27a1956aedc7f8ea5d9f.png" alt="netflix-font" border="0"></a></h1>
     <hr>
-    <div class="container p-3 mb-2 bg-dark text-white">
+    <div class="container">
         <div class="row">
             <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="https://pad.mymovies.it/filmclub/2001/01/087/locandina.jpg" alt="Card image cap">
+              
+                <div class="card p-3 mb-2 bg-dark text-white" style="width: 18rem; height: 35rem; border-style: hidden; box-shadow: 0 4px 8px 0 rgba(196, 196, 196, 0.2), 0 6px 20px 0 rgba(196, 196, 196, 0.19);">
+                    <img class="card-img-top" src="https://pad.mymovies.it/filmclub/2001/01/087/locandina.jpg" alt="Card image cap" style="width: 100%; height: 20vw; object-fit: cover;">
                     <div class="card-body">
                       <h5 class="card-title">Terminator</h5>
                       <p class="card-text">Genere: azione</p>
@@ -25,8 +27,8 @@
                   </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/I/91%2B%2BWV6FP4L._SY445_.jpg" alt="Card image cap">
+                <div class="card p-3 mb-2 bg-dark text-white" style="width: 18rem; height: 35rem; border-style: hidden; box-shadow: 0 4px 8px 0 rgba(196, 196, 196, 0.2), 0 6px 20px 0 rgba(196, 196, 196, 0.19);">
+                    <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/I/91%2B%2BWV6FP4L._SY445_.jpg" alt="Card image cap" style="width: 100%; height: 20vw; object-fit: cover;">
                     <div class="card-body">
                       <h5 class="card-title">Forrest Gump</h5>
                       <p class="card-text">Genere: commedia, drammatico</p>
@@ -35,8 +37,8 @@
                   </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/I/51XE3ed1dkL._SY445_.jpg" alt="Card image cap">
+                <div class="card p-3 mb-2 bg-dark text-white" style="width: 18rem; height: 35rem; border-style: hidden; box-shadow: 0 4px 8px 0 rgba(196, 196, 196, 0.2), 0 6px 20px 0 rgba(196, 196, 196, 0.19);">
+                    <img class="card-img-top" src="https://images-na.ssl-images-amazon.com/images/I/51XE3ed1dkL._SY445_.jpg" alt="Card image cap" style="width: 100%; height: 20vw; object-fit: cover;">
                     <div class="card-body">
                       <h5 class="card-title">Matrix</h5>
                       <p class="card-text">Genere: fantascienza, azione</p>
@@ -45,8 +47,8 @@
                   </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="https://pad.mymovies.it/filmclub/2003/12/018/locandina.jpg" alt="Card image cap">
+                <div class="card p-3 mb-2 bg-dark text-white" style="width: 18rem; height: 35rem; border-style: hidden; box-shadow: 0 4px 8px 0 rgba(196, 196, 196, 0.2), 0 6px 20px 0 rgba(196, 196, 196, 0.19);">
+                    <img class="card-img-top" src="https://pad.mymovies.it/filmclub/2003/12/018/locandina.jpg" alt="Card image cap" style="width: 100%; height: 20vw; object-fit: cover;">
                     <div class="card-body">
                       <h5 class="card-title">L'ultimo samurai</h5>
                       <p class="card-text">Genere: avventura, drammatico, storico, azione</p>
@@ -55,8 +57,8 @@
                   </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="https://2.bp.blogspot.com/-N1gw7E9VtAs/Vi3bVk4zKeI/AAAAAAABeks/jwuxyy-E4yM/s1600/0-Tarzan-Poster-recensione-disney-1999.jpg" alt="Card image cap">
+                <div class="card p-3 mb-2 bg-dark text-white" style="width: 18rem; height: 35rem; border-style: hidden; box-shadow: 0 4px 8px 0 rgba(196, 196, 196, 0.2), 0 6px 20px 0 rgba(196, 196, 196, 0.19);">
+                    <img class="card-img-top" src="https://2.bp.blogspot.com/-N1gw7E9VtAs/Vi3bVk4zKeI/AAAAAAABeks/jwuxyy-E4yM/s1600/0-Tarzan-Poster-recensione-disney-1999.jpg" alt="Card image cap" style="width: 100%; height: 20vw; object-fit: cover;">
                     <div class="card-body">
                       <h5 class="card-title">Tarzan</h5>
                       <p class="card-text">Genere: avventura, azione</p>
