--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                       <h5 class="card-title">Terminator</h5>
                       <p class="card-text">Genere: azione</p>
                       <p class="card-text">Anno: 1984</p>
+                      <a href="./test.html">Test</a>
                     </div>
                   </div>
             </div>
