--- a/tvSeries.html
+++ b/tvSeries.html
@@ -60,9 +60,9 @@
     
     
     <div id="cacio"></div>
-    <div class="container">
+    <div class="container-fluid">
 
-      <div class="row" id='movieList'>
+      <div class="row justify-content-md-center row-cols-auto" id='movieList'>
 
       </div>
 
