search migliorata e handling poster non trovati

--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
     </div>
 
 
-    <!-- Modal -->
-    <div class="modal fade" id="movieModal" tabindex="-1" aria-labelledby="movieModalTitle" aria-hidden="true" style="color:black">
+     <!-- Modal -->
+     <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true" style="color:black">
       <div class="modal-dialog modal-dialog'centered">
         <div class="modal-content">
           <div class="modal-header">
             <div class="modal-title">
               <div class="position-relative">
-                <h5 id="movieModalTitle"></h5>
-                <h6 id="movieModalYear"></h6>
+                <h5 id="modalTitle"></h5>
+                <h6 id="modalYear"></h6>
               </div>
             </div>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -89,17 +89,17 @@
             <div class="container-fluid">
               <div class="row">
                 <div class="col">
-                  <img src="" alt="" id="movieModalBackdrop">
+                  <img src="" alt="" id="modalBackdrop">
                 </div>
                 <div class="col">
                   <h6>Genres:</h6>
-                  <span id="movieModalGenres"></span>
+                  <span id="modalGenres"></span>
                 </div>
               </div>
               <br>
               <div class="row">
                   <h6>Overview:</h6>
-                  <p id="movieModalOverview"></p>
+                  <p id="modalOverview"></p>
               </div>
           </div>
           <div class="modal-footer">
